lessons list added

--- a/src/app/main/training/training.component.html
+++ b/src/app/main/training/training.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-info">
-  <a class="navbar-item" href="#"><fa name="angle-left"></fa>Lesson {{lessonNumber}}</a>
+  <a class="navbar-item" href="/lessons"><fa name="angle-left"></fa>Lesson {{lessonNumber}}</a>
   <div class="navbar-item">
       Current: {{currentRight}}
   </div>
