fixed progress reseting

--- a/src/app/main/lessons/lessons.component.html
+++ b/src/app/main/lessons/lessons.component.html
@@ -10,8 +10,8 @@
     </div>
   </div>
 </div>
-<nav class="navbar navbar-light  bg-info footer">
-  <div class="navbar-item" (click)='resetProgress()'>
+<nav class="navbar navbar-light  bg-info footer" (click)='resetProgress()'>
+  <div class="navbar-item">
       Reset progress
   </div>
 </nav>
